[package]
name = "kiraz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# User interface
slint = "0.2.1"
# Image encoding and decoding
image = "0.24.1"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# CLI args
structopt = "0.3.26"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Calculating paths for local targets
shellexpand = { version = "2.1", package = "shellexpand-fork" }
